syntax = "proto3";

option csharp_namespace = "Wealth.InstrumentManagement.API";

package InstrumentManagement;

service InstrumentsService {
  rpc ChangePrice (ChangePriceRequest) returns (ChangePriceResponse);
}

message ChangePriceRequest {
  string id = 1;
  double price = 2;
}

message ChangePriceResponse {
}
