syntax = "proto3";

package Wealth.InstrumentManagement;

service InstrumentsService {
  rpc GetInstrument (GetInstrumentRequest) returns (GetInstrumentResponse);
  rpc ChangePrice (ChangePriceRequest) returns (ChangePriceResponse);
}

message GetInstrumentRequest {
  InstrumentIdProto id = 1;
}

message GetInstrumentResponse {
  InstrumentIdProto id = 1;
  InstrumentTypeProto type = 2;
  string name = 3;
  MoneyProto price = 4;
  oneof instrument {
    StockInstrumentProto stock_info = 5;
    BondInstrumentProto bond_info = 6;
  }
}

message InstrumentIdProto {
  GuidProto id = 1;
}

message GuidProto {
  string value = 1;
}

message StockInstrumentProto {
  int32 lot_size = 4;
  MoneyProto dividend_per_year = 5;
}

message BondInstrumentProto {
}

enum InstrumentTypeProto {
  IT_STOCK = 0;
  IT_BOND = 1;
}

message ChangePriceRequest {
  InstrumentIdProto id = 1;
  MoneyProto price = 2;
}

message ChangePriceResponse {
}

message MoneyProto {
  CurrencyIdProto currency_id = 1;
  DecimalProto price = 2;
}

message CurrencyIdProto {
  string code = 1;
}

message DecimalProto {

  // Whole units part of the amount
  int64 units = 1;

  // Nano units of the amount (10^-9)
  // Must be same sign as units
  sfixed32 nanos = 2;
}